update users routes
